--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,28 @@
 <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-</br>
+<div class="container" style="text-align:center;">
+<br>
 <div class="row">
-	<div class="span8 offset4">
+	<div class="span16">
 		<h1>Hackathon Sites</h1>
 	</div>
-	<div class="span8 offset3">
-		<label for="delete" id="deleteLabel">Name:</label>
-		<input type="delete" id="delete" placeholder="Enter Link To Delete Here"/>
-	</div>
-	<div class="span2">
-		<span id="deleteButton">Delete</span>
+</div>
+<div class="row" style="
+    margin-bottom: 10px;
+">
+	<div class="span16">
+		
+		<input type="delete" id="delete" placeholder="Enter Link To Delete Here">
+	<span id="deleteButton">Delete</span></div>
+	
+</div><div class="row" style="
+    margin-bottom: 10px;
+">
+	<div class="span16">
+		<a href="add.html" style="font-size: 24px;">Add Links</a>
 	</div>
 </div>
 <div class="row">
-	<div class="span12">
+	<div class="span16">
 		<table class="tablesorter">
 			<thread>
 				<tr>
