Fixed bootstrap formatting on adding page

--- a/app/views/more/add.html.erb
+++ b/app/views/more/add.html.erb
@@ -1,5 +1,11 @@
 <title>Hackathon Sites Adding</title>
 <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+<div class="container">
+<div class="row">
+	<div class="span12" style="text-align:center; font-size 24px">
+		<a href="/">Go Back</a>
+	</div>
+</div>
 <div class="row">
 	<div class="span8 offset3">
 		<label for="name" id="nameLabel">Name:</label>
@@ -20,4 +26,5 @@
 	<div class="span1">
 		<span id="submitButton">Submit</span>
 	</div>
+</div>
 </div>
